Version 6.04

Bug Fixes: 

        Fixed bug syncing folders from the CLI.
        Deleting a file with CLI is functional.

Improvements: 

        Changed the green colors back to blue for easier reading.
        "Set Current Folder to Restore Snapshot from" has been renamed to 
        "Set Current Folder as Snapshot Origin".
        Added text labels back to object explorer.

New Features:

        Snapshots can sync changes to a bucket from prior snapshots.
          
Features:

1. Tier buckets to and from Amazon Glacier.
2. Sync files to and from S3 storage.
3. Stream music.
4. Text editor.
5. Modify Bucket and Object ACL's.
6. Take screen shots and upload them to your bucket.
7. Bucket versioning and life cycles.
8. Graphical and console based background syncing.
9. Store multiple Amazon S3 accounts.
10. Image viewer.
11. Migrate buckets between S3 accounts.
12. Bucket search.
13. Performance testing with graphs.
14. Command-line interface.
15. IRC client that allows you to save chat sessions to S3.
16. Access shared buckets on the same S3 provider.
17. Share buckets with the Canonical ID of a user on the same S3 provider.
18. Graph CSV files and save them to a bucket.
19. Record audio messages and save them to a bucket.
20. Bucket snapshots.

Command-line Options:

java -jar CloudExplorer.jar put filename bucket
java -jar CloudExplorer.jar get filename bucket destination
java -jar CloudExplorer.jar delete filename bucket 

#List bucket contents
java -jar CloudExplorer.jar ls bucket

#List buckets
java -jar CloudExplorer.jar listbuckets

#Delete a bucket
java -jar CloudExplorer.jar rmbucket bucket

#Create a bucket
java -jar CloudExplorer.jar makebucket bucket

#Sync to S3
java -jar CloudExplorer.jar synctos3 location bucket [folder]

#Sync from S3
java -jar CloudExplorer.jar syncfroms3 destination bucket [folder]

#Performance Test - PUT
java -jar CloudExplorer.jar uploadtest bucket size threads operations

#Performance Test - GET