@@ -4,6 +4,7 @@ Bug Fixes:
 
         Fixed bug syncing folders from the CLI.
         Deleting a file with CLI is functional.
+        Catch exception when aborting a sync and reloading buckets.
 
 Improvements: 
 
